# api_test

./: README.md  enviroment.py  pyproject.toml
lib/: assertions.py  base_case.py  requests.py
tests/: test_auth.py  test_creating_resource.py  test_deleting_resource.py  test_filtering_resource.py  test_get_nested_resource.py  test_getting_resource.py  test_patching_resource.py  test_updating_resource.py
